--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ h6 {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: #f8f5fd url("../img/wiseconference2024/execteamphoto.png") center top no-repeat;
+    background: #f8f5fd url("../img/wiseconference2024/execteamphoto.png") top no-repeat;
     background-size: cover;
 }
 
