--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ h6 {
     padding: 0 0 10px 0;
     font-size: 20px;
     transition: all 0.5s;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 0);
 }
 
 #topbar .social-links {
@@ -147,7 +147,7 @@ h6 {
 #header.header-pages {
     height: 70px;
     padding: 15px 0;
-    background-color: #fff;
+    background-color: #ffffff00;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
 }
 
@@ -206,7 +206,7 @@ h6 {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: #f8f5fd url("../img/wiseconference2024/execteamphoto.png") top no-repeat;
+    background: #f8f5fd url("../img/wiseconference2024/execteamphoto.heic") top no-repeat;
     background-size: cover;
 }
 
