--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ h6 {
     padding: 0 0 10px 0;
     font-size: 20px;
     transition: all 0.5s;
-    background-color: rgba(255, 255, 255, 0);
+    /*background-color: rgba(255, 255, 255, 0);*/
 }
 
 #topbar .social-links {
