--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ h6 {
     padding: 0 0 10px 0;
     font-size: 20px;
     transition: all 0.5s;
-    /*background-color: rgba(255, 255, 255, 0);*/
+    background-color: rgb(255, 255, 255, 1);
 }
 
 #topbar .social-links {
@@ -147,7 +147,7 @@ h6 {
 #header.header-pages {
     height: 70px;
     padding: 15px 0;
-    background-color: #ffffff00;
+    background-color: #ffffff;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
 }
 
