--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ h6 {
 #header.header-pages {
     height: 70px;
     padding: 15px 0;
-    background-color: #ffffff;
+    background-color: #fff;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
 }
 
