--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ h6 {
 
 #intro .intro-info h2 {
     color: #e6e8e5;
-    margin-bottom: 40px;
+    margin-right: 40px;
     font-size: 48px;
     font-weight: 700;
 }
