--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ h6 {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: #f8f5fd url("../img/wiseconference2024/execteamphoto1.jpg") top no-repeat;
+    background: #f8f5fd url("../img/wiseconference2024/execteamphoto2.jpg") top no-repeat;
     background-size: cover;
 }
 
@@ -221,6 +221,10 @@ h6 {
 
 #intro .intro-info h2 span {
     color: #CBC3E3;
+}
+
+#intro .text-right {
+    text-align: right;
 }
 
 #intro .intro-info .btn-get-started,
