moving text to the right side attempt #4

--- a/css/style.css
+++ b/css/style.css
@@ -210,9 +210,12 @@ h6 {
     position: relative;
     background: #f8f5fd url("../img/wiseconference2024/execteamphoto2.jpg") top no-repeat;
     background-size: cover;
-    right: 0;
-    left: auto;
-    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#intro .intro-info {
+    width: 50%; 
 }
 
 #intro .intro-info h2 {
@@ -220,6 +223,7 @@ h6 {
     margin-right: 40px;
     font-size: 48px;
     font-weight: 700;
+    text-align: right;
 }
 
 #intro .intro-info h2 span {
