--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ h6 {
     right: 0;
     transition: all 0.5s;
     z-index: 997;
-    background-color: rgba(255, 255, 255, 1);
+    /*background-color: rgba(255, 255, 255, 1);*/
 }
 
 #header.header-scrolled,
@@ -208,7 +208,7 @@ h6 {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: #f8f5fd url("../img/wiseconference2024/execteamphoto3.jpg") top no-repeat;
+    background: #f8f5fd url("../img/wiseconference2024/execteamphoto.jpg") top no-repeat;
     background-size: cover;
 }
 
