--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ h6 {
 }
 
 #header {
-    height: 110px;
+    height: 75px;
     transition: all 0.5s;
     z-index: 997;
     transition: all 0.5s;
@@ -142,7 +142,7 @@ h6 {
     right: 0;
     transition: all 0.5s;
     z-index: 997;
-    /*background-color: rgba(255, 255, 255, 1);*/
+    background-color: rgba(255, 255, 255, 1);
 }
 
 #header.header-scrolled,
