--- a/css/style.css
+++ b/css/style.css
@@ -229,11 +229,11 @@ h6 {
 
 #intro .intro-info h2 {
     color: #301941;
-    margin-right: 175px;
+    margin-right: 30%;
     font-size: 36px;
     font-weight: 700;
     padding-right: 0px;
-    width: 245px;
+    width: 93%;
 }
 
 #intro .intro-info h2 span {
