--- a/css/style.css
+++ b/css/style.css
@@ -309,13 +309,11 @@ h6 {
 }
 
 .main-nav .drop-down ul {
-    display: block;
+    display: none;
     position: absolute;
     left: 0;
     top: calc(100% - 30px);
     z-index: 99;
-    opacity: 0;
-    visibility: hidden;
     padding: 10px 0;
     background: #fff;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
@@ -323,9 +321,8 @@ h6 {
 }
 
 .main-nav .drop-down:hover>ul {
-    opacity: 1;
+    display: block;
     top: 100%;
-    visibility: visible;
 }
 
 .main-nav .drop-down li {
@@ -359,9 +356,7 @@ h6 {
 }
 
 .main-nav .drop-down .drop-down:hover>ul {
-    opacity: 1;
-    top: 0;
-    left: 100%;
+    display: block;
 }
 
 .main-nav .drop-down .drop-down>a {
