--- a/css/style.css
+++ b/css/style.css
@@ -1855,3 +1855,32 @@ li.timeline-event::before {
     padding-top: 2px;
     opacity: 0.7;
 }
+
+/* Conference Page Carousel */
+.carousel-item img {
+    max-height: 500px; 
+    width: 100%;        
+    object-fit: cover;  
+}
+
+.custom-carousel-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #ffffff; 
+    opacity: 0.9;
+    z-index: 10; 
+}
+
+.carousel-control-prev.custom-carousel-control {
+    left: -60px; 
+}
+
+.carousel-control-next.custom-carousel-control {
+    right: -60px; 
+}
+
+.custom-arrow {
+    display: inline-block;
+    font-size: 2rem; 
+}
