--- a/css/style.css
+++ b/css/style.css
@@ -1237,7 +1237,7 @@ h6 {
 #our-events .tag-engineering {
     display: inline-block;
     background-color: #fec7483e; 
-    color: #FEC848; 
+    color: #d49502; 
     padding: 5px 10px; 
     border-radius: 8px; 
     margin-right: 5px; 
