--- a/css/style.css
+++ b/css/style.css
@@ -207,18 +207,18 @@ h6 {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: #f8f5fd url("../img/wiseconference2024/execteamphoto.jpg") top no-repeat;
+    background: #f8f5fd ;
     background-size: cover;
 }
 
-.intro-layer {
+/* .intro-layer {
     position: absolute;
     top: 0;
     right: 0;
     width: 25%;
     height: 100%;
     background: rgba(255, 255, 255, 0.8);
-}
+} */
 
 #intro .intro-info {
     width: 100%;
@@ -235,16 +235,6 @@ h6 {
     width: 100%; 
     text-align: right;
 }
-
-/* #intro .intro-info h2 {
-    color: #301941;
-    margin-right: 75%;  
-    font-size: 36px;
-    font-weight: 700;
-    padding-right: 0px;
-    width: 180px;
-    text-align: right;
-} */
 
 #intro .intro-info h2 span {
     color: #301934;
@@ -1649,7 +1639,7 @@ h6 {
 }
 
 @media (max-width: 767px) {
-    #intro {
+    /* #intro {
         height: auto;
         padding: 80px 0 60px 0;
     }
@@ -1660,32 +1650,32 @@ h6 {
         position: relative;
         background: #f8f5fd url("../img/intro-xs.jpg") center top no-repeat;
         background-size: cover;
-    }
+    } */
 
-    #intro .container {
+    /* #intro .container {
         height: auto !important;
-    }
+    } */
 
-    #intro .intro-img {
+    /* #intro .intro-img {
         width: 80%;
-    }
+    } */
 
-    #intro .intro-info {
+    /* #intro .intro-info {
         text-align: right;
         padding-top: 20vh;
         justify-content: center;
-    }
+    } */
 
-    #intro .intro-info h2 {
+    /* #intro .intro-info h2 {
         font-size: 36px;
         margin-bottom: 30px;
         margin: 0; 
         width: 100%;
-    }
+    } */
 
-    .section-header p {
+    /* .section-header p {
         width: 100%;
-    }
+    } */
 }
 
 @media (max-width: 574px) {
