--- a/css/style.css
+++ b/css/style.css
@@ -207,63 +207,56 @@ h6 {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: #f8f5fd ;
+    background: #f8f5fd url("../img/landing-bg.png") top no-repeat;
     background-size: cover;
+    z-index: 1;
 }
 
-/* .intro-layer {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 25%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.8);
-} */
-
-#intro .intro-info {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    padding-right: 10px;
+#intro .container {
+    position: relative;
+    z-index: 2;
+    height: 100%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-width: 100%;
+    align-items: start;
 }
 
-#intro .intro-info h2 {
-    color: #301941;
-    font-size: 36px;
-    font-weight: 700;
-    padding: 0;
-    width: 100%; 
-    text-align: right;
+#intro .logo-img {
+   max-width: 700px;
+   padding-top: 300px;
+   padding-left: 50px;
 }
 
-#intro .intro-info h2 span {
-    color: #301934;
+#intro .container {
+    position: relative;
+    z-index: 2;
+    height: 100%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-width: 100%;
+    align-items: start;
 }
 
-#intro .text-right {
-    text-align: right;
+#intro .intro-title {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400; /* Open Sans Regular */
+    font-size: 30px; 
+    color: #fff; 
+    padding-left: 70px;
+    margin: 0px;
 }
 
-#intro .intro-info .btn-get-started,
-#intro .intro-info .btn-initiatives {
-    font-family: "Montserrat", sans-serif;
-    font-size: 16px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 10px 32px;
-    border-radius: 4px;
-    transition: 0.5s;
-    color: #fff;
-    background: #4a148c;
-    color: #fff;
+#intro .intro-subtitle {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300; /* Open Sans Light */
+    font-size: 24px; 
+    color: #ddd; 
+    padding-left: 70px;
 }
 
-#intro .intro-info .btn-get-started:hover,
-#intro .intro-info .btn-initiatives:hover {
-    background: #8e24aa;
-}
 
 .main-nav,
 .main-nav * {
@@ -1586,12 +1579,14 @@ h6 {
     }
 }
 
+/* Large screens */
 @media (min-width: 992px) {
     #intro .intro-info {
         padding-top: 80px;
     }
 }
 
+/* Medium screens (max-width: 991px) */
 @media (max-width: 991px) {
     #topbar {
         display: none;
@@ -1622,7 +1617,59 @@ h6 {
     #about-this-event {
         padding-bottom: 30px;
     }
+
+    #intro .logo-img {
+        max-width: 400px; 
+    }
+
+    #intro .intro-title {
+        font-size: 30px; 
+    }
+
+    #intro .intro-subtitle {
+        font-size: 20px;
+    }
 }
+
+
+/* Default styles for large screens */
+#intro .logo-img {
+    max-width: 550px;
+}
+
+#intro .intro-title {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 36px; 
+    color: #fff;
+    margin-top: 20px;
+}
+
+#intro .intro-subtitle {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 24px; 
+    color: #ddd;
+    margin-top: 10px;
+}
+
+/* Medium screens (max-width: 991px) */
+@media (max-width: 991px) {
+    #intro .logo-img {
+        max-width: 400px; 
+    }
+
+    #intro .intro-title {
+        font-size: 30px; 
+        padding-left: 60px;
+    }
+
+    #intro .intro-subtitle {
+        font-size: 20px; 
+        padding-left: 60px;
+    }
+}
+
 
 @media (max-width: 768px) {
     .back-to-top {
@@ -1636,10 +1683,12 @@ h6 {
     #faq #faq-list i {
         top: 13px;
     }
+    
 }
 
+/* Small screens (max-width: 767px) */
 @media (max-width: 767px) {
-    /* #intro {
+    #intro {
         height: auto;
         padding: 80px 0 60px 0;
     }
@@ -1648,39 +1697,67 @@ h6 {
         width: 100%;
         height: 100vh;
         position: relative;
-        background: #f8f5fd url("../img/intro-xs.jpg") center top no-repeat;
+        background: #f8f5fd url("../img/landing-bg.png") center top no-repeat;
         background-size: cover;
-    } */
+    }
 
-    /* #intro .container {
+    #intro .container {
         height: auto !important;
-    } */
+    }
 
-    /* #intro .intro-img {
-        width: 80%;
-    } */
-
-    /* #intro .intro-info {
+    #intro .intro-info {
         text-align: right;
         padding-top: 20vh;
         justify-content: center;
-    } */
+    }
 
-    /* #intro .intro-info h2 {
+    #intro .intro-info h2 {
         font-size: 36px;
         margin-bottom: 30px;
         margin: 0; 
         width: 100%;
-    } */
+    }
 
-    /* .section-header p {
+    .section-header p {
         width: 100%;
-    } */
+    }
+    #intro .logo-img {
+        max-width: 300px; 
+    }
+
+    #intro .intro-title {
+        font-size: 24px; 
+        padding-left: 60px;
+    }
+
+    #intro .intro-subtitle {
+        font-size: 18px; 
+        padding-left: 60px;
+    }
+    
+
+    
 }
 
+
+/* Extra small screens (max-width: 574px) */
 @media (max-width: 574px) {
     #footer .footer-top .social-links a {
         margin-bottom: 25px;
+    }
+    
+    #intro .logo-img {
+        max-width: 200px; 
+    }
+
+    #intro .intro-title {
+        font-size: 20px; 
+        padding-left: 55px;
+    }
+
+    #intro .intro-subtitle {
+        font-size: 16px; 
+        padding-left: 55px;
     }
 }
 
