--- a/css/style.css
+++ b/css/style.css
@@ -204,12 +204,14 @@ h6 {
 }
 
 #intro {
-    width: 100%;
+    /* width: 100%; */
     height: 100vh;
     position: relative;
     background: #f8f5fd url("../img/landing-bg.png") top no-repeat;
     background-size: cover;
     z-index: 1;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #intro .container {
@@ -495,6 +497,7 @@ h6 {
 
 #about .about-content {
     padding-top: 40px;
+    font-family: "Montserrat", sans-serif;
 }
 
 #about .about-content h2 {
@@ -567,12 +570,31 @@ h6 {
 }   
 
 #mission .mission-content {
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 120px;
+    padding-bottom: 80px;
     color: #000000;
     font-size: 24px;
     line-height: 1.5;
+    font-family: "Montserrat", sans-serif;
     /* font-style: italic; */
+}
+
+#pastevents .thumbnail {
+    display: flex;  
+    padding-bottom: 40px;              
+}
+
+#pastevents .thumbnail img {
+    padding-bottom: 10px;         /* Space between image and caption */
+    max-height: 240px;            
+    width: 100%;                  
+}
+
+#pastevents .thumbnail .caption p {
+    text-align: center;           
+    width: 100%;  
+    color:#000000;
+    font-family: "Montserrat", sans-serif;
 }
 
 #apply-btn {
