--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ h6 {
 .section-header h3 {
     font-size: 36px;
     color: #413e66;
-    text-align: center ;
+    text-align: left ;
     font-weight: 700;
     position: relative;
     font-family: "Montserrat", sans-serif;
