Add new events for march

--- a/css/style.css
+++ b/css/style.css
@@ -1239,7 +1239,7 @@ h6 {
     font-size: 40px;
     font-weight: 800;
     margin-bottom: 0px;
-    text-align: center;
+    text-align: left;
     color: #535074;
 }
 
